# introspection

./: .clang-format  .gitignore  CMakeLists.txt  README.org  instrospection-config.cmake.in
cmake/: introspection_deps.cmake
instrospection/: CMakeLists.txt  config.hpp.in
instrospection_testing/: CMakeLists.txt
introspection/: CMakeLists.txt  config.hpp.in  introspection.hpp  macros.hpp
introspection/details/: concepts.hpp  enumdata.hpp  import.hpp  metadata_query.hpp  typedata.hpp
introspection_testing/: CMakeLists.txt  enumdata_test.cpp  macros_test.cpp  metadata_test.cpp  type_name_test.cpp
scripts/: check-format.sh
